--- a/cartorioDocketApp/pom.xml
+++ b/cartorioDocketApp/pom.xml
@@ -60,7 +60,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.docket.cartorio</groupId>
+            <artifactId>cartorioDocketApp</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
